--- a/style.css
+++ b/style.css
@@ -1,7 +1,21 @@
-h3{
-    font-size: 25px !important;
-    color: black !important;
+body{
+    background-size: cover;
+}
+.heading{
+    width: 100%;
+    margin: 0;
+    font-size: 20px;
+}
+.note{
+    color: black;
+    font-size: 15px;
+}
+.song_name{
+    font-size: 20px;
 }
 canvas{
-    border: 4px black solid;
+    background-color: #000000;
+    border: 5px solid white;
+    border-radius: 20px;
+    box-shadow: 5px 5px 5px #73cfd8;
 }
